templates/mutating-webhook_template.yaml
---
# Source: mutating-webhook/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mutating-webhook
  labels:
    helm.sh/chart: mutating-webhook-0.3.0
    app.kubernetes.io/name: mutating-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: mutating-webhook
    app.kubernetes.io/instance: release-name
---
# Source: mutating-webhook/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mutating-webhook
  labels:
    helm.sh/chart: mutating-webhook-0.3.0
    app.kubernetes.io/name: mutating-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mutating-webhook
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mutating-webhook
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-mutating-webhook
      securityContext:
        {}
      volumes:
      - name: certs
        secret:
          secretName: release-name-mutating-webhook-tls
      containers:
        - name: mutating-webhook
          securityContext:
            {}
          image: "mutating-webhook:1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
          - name: certs
            mountPath: "/certs"
            readOnly: true
          livenessProbe:
            httpGet:
              path: /_healthz
              port: https
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /_ready
              port: https
              scheme: HTTPS
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
---
# Source: mutating-webhook/templates/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-mutating-webhook
  labels:
    helm.sh/chart: mutating-webhook-0.3.0
    app.kubernetes.io/name: mutating-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
  name: release-name-mutating-webhook
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    namespaceSelector:
      null
    clientConfig:
      service:
        name: release-name-mutating-webhook
        namespace: default
        path: /mutate
        port: 443
    failurePolicy: Fail
    reinvocationPolicy: Never
    sideEffects: Unknown
    matchPolicy: Equivalent
    name: imagepolicy
    rules:
      null
